--- a/package.json
+++ b/package.json
@@ -33,5 +33,11 @@
     "@types/react-dom": "^19",
     "postcss": "^8.5.6",
     "typescript": "^5"
+  },
+  "overrides": {
+    "react-global-loader": {
+      "react": "19.1.0",
+      "react-dom": "19.1.0"
+    }
   }
 }
